Added Cities as a List functionality

--- a/iShip/src/main/resources/config.properties
+++ b/iShip/src/main/resources/config.properties
@@ -1,4 +1,5 @@
 dbpassword=Insane!2021
 database=loadtransporting
+databaseWorld=world
 dbuser=root
 githubPushToken=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
