--- a/iShip/.classpath
+++ b/iShip/.classpath
@@ -31,8 +31,9 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v9.0"/>
-	<classpathentry kind="lib" path="/LoadTransporting/src/main/webapp/WEB-INF/lib/mysql-connector-java-8.0.30.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Hayk Chilingaryan/Desktop/Required Forms/Required Forms/jars/activation-1.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Hayk Chilingaryan/Desktop/Required Forms/Required Forms/jars/javax.mail-1.6.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="/LoadTransporting/src/main/webapp/WEB-INF/lib/mysql-connector-java-8.0.30.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/Hayk Chilingaryan/Desktop/Required Forms/Required Forms/jars/activation-1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/Hayk Chilingaryan/Desktop/Required Forms/Required Forms/jars/javax.mail-1.6.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/Hayk Chilingaryan/Downloads/lombok.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
